[package]
name = "chronos_labs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

